почему я чёрный в кавычках

--- a/index.html
+++ b/index.html
@@ -3,28 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        img {
-            width: 600px;
-            height: 600px;
-        }
-        p{
-            color: darkblue ;
-        }
-    </style>
+    <title>ЭТО ЧО ТАК АНАЛИЗИРУЕМ</title>
+    <link rel="stylesheet" href="./slyle.css">
+
 </head>
 <body>
-    <h1>ТОП 5 ПРИЧИН СТАТЬ АРМАТУРОЙ</h1>
-
-    <img src="./omori-release-date.jpg" alt="">
-
-    <p>1 МЕСТО: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam ducimus voluptatum ipsa illum quia accusantium cupiditate excepturi officia hic ut.</p>
-
-    <h1>ТОП 5 ПРИЧИН СТАТЬ A380</h1>
-
-    <img src="./airbus-a380-8.jpg" alt="">
-
-    <p>1 МЕСТО: ДИСПЕТЧЕР МЫ ПАДАЕМ!!!!! ПОНЯЛ ВЫЧЁКРКИВАЮ</p>
+    <div class="red">
+        <img src="./omori-release-date.jpg" alt="ЧТО">
+        <p>РП ДЛЯ ЛЯЛЕЧЕК</p>
+    </div>
+    <div class="blue">
+        <img src="./airbus-a380-8.jpg" alt="НЕТ КАРТИНКИ">
+        <p>ЭТО ВООБЩЕ ЗАКОННО<p>
+    </div>
+    <div class="green"></div>
+    
 </body>
 </html>
