почему я чёрный день третий

--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЭТО ЧО ТАК АНАЛИЗИРУЕМ</title>
-    <link rel="stylesheet" href="./slyle.css">
+    <link rel="stylesheet" href="./block.css">
 
 </head>
 <body>
-    <div class="red">
-        <img src="./omori-release-date.jpg" alt="ЧТО">
-        <p>РП ДЛЯ ЛЯЛЕЧЕК</p>
-    </div>
-    <div class="blue">
-        <img src="./airbus-a380-8.jpg" alt="НЕТ КАРТИНКИ">
-        <p>ЭТО ВООБЩЕ ЗАКОННО<p>
-    </div>
-    <div class="green"></div>
-    
+    <a href="./страницапяч2.html">страницапяч2
+        <img src="./omori-release-date.jpg" alt="">
+    </a>
+    <div class="block1"></div>
+    <div class="block2"></div>
+    <div class="block3"></div>
 </body>
 </html>
