--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,12 @@
     <link rel="stylesheet" href="./block.css">
 
 </head>
+
 <body>
-    <a href="./страницапяч2.html">страницапяч2
-        <img src="./omori-release-date.jpg" alt="">
-    </a>
+    <a href="./страницапяч2.html">страницапяч2</a>
     <div class="block1"></div>
     <div class="block2"></div>
     <div class="block3"></div>
 </body>
+
 </html>
