--- a/страницапяч3.html
+++ b/страницапяч3.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./страницапяч3.css">
 </head>
+
 <body>
     <div class="block5">
         <a href="./index.html">страницапяч</a>
@@ -13,6 +15,26 @@
         <a href="./страницапяч3.html">страницапяч3</a>
         <a href="https://github.com/">GitHub</a>
     </div>
+    <div class="block6">
+        <div class="list">
+            <ul>what
+                <li>почему я чёрный</li>
+            </ul>
+        </div>
+        <div class="list">
+            <ol>why
+                <li>
+                    топ 5 почему я чёрный
+                </li>
+            </ol>
+        </div>
+        <div class="list">
+            <ol>why
+                <li>
+                    топ 5 почему я чёрный
+                </li>
+            </ol>
+        </div>
+    </div>
 
-</body>
 </html>
