почему я чёрный день пятый

--- a/страницапяч3.html
+++ b/страницапяч3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>wait what?</title>
     <link rel="stylesheet" href="./страницапяч3.css">
 </head>
 
@@ -35,6 +35,15 @@
                 </li>
             </ol>
         </div>
+    </div>
+    <div class="block7">
+        <input type="text" value="значение">
+        <label for="rad">радиокнопка</label>
+        <input type="radio" id="rad">
+        <input type="checkbox" id="check">
+        <label for="check">галочка</label>
+        <div class="hidden-block">скрытый блок</div>
+        
     </div>
 
 </html>
