почему я чёрный только это дом

--- a/страницапяч3.html
+++ b/страницапяч3.html
@@ -37,12 +37,19 @@
         </div>
     </div>
     <div class="block7">
-        <input type="text" value="значение">
-        <label for="rad">радиокнопка</label>
-        <input type="radio" id="rad">
+        <input type="checkbox" id="tepi">
+        <label for="tepi">нетекст лол</label>
+        <label for="rad">нерадиокнопка</label>
+        <input type="checkbox" id="rad">
         <input type="checkbox" id="check">
         <label for="check">галочка</label>
         <div class="hidden-block">скрытый блок</div>
+        <div class="hidden-block2">
+            <a href="https://www.youtube.com/">ютуб</a>
+        </div>
+        <div class="hidden-block3">
+            <img src="./omori-release-date.jpg" alt="">
+        </div>
         
     </div>
 
